--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-hacker
 title: Welcome to Sinister 6 Studios!
 description: Feel free to check out our new games and projects
+title: The Last Step of Time
+description: Join Chronos Kid as he battles through different eras in time to defeat The Last Order in their attempt to take over the world!
